Some more general cleanup